--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
         
     
     </main>
-    <ul></ul>
+    <ul class="bookmarkList"></ul>
     <footer>January 2020 -Hsin Ling Hu</footer>
  
 </body>
